# postcodejager

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  idee.yml  vraag.yml
.github/workflows/: deploy.yml
deploy/: README.md
deploy/ansible/: playbook.yml
deploy/ansible/templates/: Caddyfile.j2  env.j2  postcodejager.service.j2
deploy/tofu/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: fetch_basemap.py  fetch_pc4.py
src/postcodejager/: __init__.py  __main__.py  app.py  config.py  coverage.py  geo.py  gpx.py  planning.py  postcodes.py  routing.py  storage.py  strava.py
src/postcodejager/data/: provinces.geojson
src/postcodejager/static/: app.js  index.html  privacy.html  style.css  voorwaarden.html
tests/: conftest.py  test_app.py  test_config.py  test_coverage.py  test_fetch_basemap.py  test_geo.py  test_gpx.py  test_planning.py  test_postcodes.py  test_routing.py  test_storage.py  test_strava.py
tests/fixtures/: pc4_sample.geojson
